[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tatsu-json2yaml"
description = "json2yaml converter powered by TatSu"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
requires-python = "==3.10.*"
dependencies = [
    "TatSu~=5.8.3"
]
dynamic = ["version"]

[project.scripts]
tatsu-json2yaml = "tatsu_json2yaml.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-icdiff"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "tatsu_json2yaml.version.version"}

[tool.setuptools_scm]
write_to = "src/tatsu_json2yaml/version.py"

[tools.black]
line-length = 100

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 100
